--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -36,7 +36,7 @@ jobs:
                                             "lubridate",
                                             "magrittr",
                                             "MCMCvis",
-                                            "MODISTools",
+                                            "modisfast",
                                             "osmdata",
                                             "pals",
                                             "plotly",
