--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   bookdown:
     name: Render-Book
-    runs-on:   macos-11 # macos-latest # ubuntu-latest #  macos USES 10 TIMES THE MINUTES
+    runs-on:   macos-latest # ubuntu-latest #  macos USES 10 TIMES THE MINUTES
     steps:
       - uses: actions/checkout@v2
       # More detail here, https://github.com/r-lib/actions
