--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -23,7 +23,8 @@ jobs:
                                             "activity",
                                             "corrplot",
                                             "cowplot",
-                                            "dplyr", 
+                                            "dplyr",
+                                            "progress",
                                             "elevatr",
                                             "gfcanalysis",  
                                             "ggplot2",
